Updated the README file for spark-shell-scala-examples section